# grm

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: commands.rs  git.rs  main.rs
src/commands/: get.rs  list.rs  look.rs  macros.rs  root.rs
src/git/: clone.rs  command_state.rs  mod.rs  pull.rs
