[package]
name = "grm"
version = "0.1.0"
authors = ["Josh <QuestofIranon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.1"
git2 = "0.10.0"
walkdir = "2.2.9"
pathdiff = "0.1.0"
failure = "0.1.5"
regex = "1.3.1"
git2_credentials = "0.3.2"
dirs = "2.0.2"
enum_dispatch = "0.1.3"