[package]
name = "grm"
version = "0.1.0"
authors = ["Josh <QuestofIranon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.7"
git2 = "0.11.0"
walkdir = "2.3.1"
pathdiff = "0.1.0"
failure = "0.1.6"
regex = "1.3.3"
git2_credentials = "0.4.0"
dirs = "2.0.2"
enum_dispatch = "0.2.0"
